<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="deal"
            type="com.example.gangame.Deal" />
    </data>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/imageGame"
            style="@style/Image"
            android:layout_width="90dp"
            android:layout_height="80dp"
            app:imageUrl="@{deal.thumb}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_deals_pikachu" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/titleGame"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:maxLines="2"
            android:text="@{deal.title}"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hellblade" />

        <TextView
            android:id="@+id/RatingsGame"
            style="@style/Subtitle"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/ratings"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/titleGame" />

        <TextView
            android:id="@+id/normalPriceText"
            style="@style/SecondPrice"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@+id/dealPriceText"
            app:layout_constraintEnd_toStartOf="@+id/dealPriceText"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/dealPriceText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dealPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xmedium"
            android:layout_marginEnd="8dp"
            android:text="@string/deal_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/normalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@{deal.normalPriceFormatted}"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="@+id/normalPriceText"
            app:layout_constraintStart_toStartOf="@+id/normalPriceText"
            app:layout_constraintTop_toBottomOf="@+id/normalPriceText"
            tools:text="@string/sample_money" />

        <TextView
            android:id="@+id/dealPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@{deal.salePriceFormatted}"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@+id/dealPriceText"
            app:layout_constraintStart_toStartOf="@+id/dealPriceText"
            app:layout_constraintTop_toBottomOf="@+id/dealPriceText"
            tools:text="@string/sample_less_money" />

        <ImageView
            android:id="@+id/metecriticImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xmedium"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/RatingsGame"
            app:srcCompat="@drawable/ic_metacritic_rating" />

        <ImageView
            android:id="@+id/steamImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toEndOf="@+id/metacriticScore"
            app:layout_constraintTop_toBottomOf="@+id/RatingsGame"
            app:srcCompat="@drawable/ic_steam_rating" />

        <TextView
            android:id="@+id/metacriticScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@{String.valueOf(deal.metacriticScore)}"
            app:layout_constraintStart_toEndOf="@+id/metecriticImage"
            app:layout_constraintTop_toBottomOf="@+id/RatingsGame"
            tools:text="@string/sample_meta_score" />

        <TextView
            android:id="@+id/steamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@{String.valueOf(deal.steamRating)}"
            app:layout_constraintStart_toEndOf="@+id/steamImage"
            app:layout_constraintTop_toBottomOf="@+id/RatingsGame"
            tools:text="@string/sample_steam_score" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.63" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
</layout>