<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="topGame"
            type="com.example.gangame.TopGame" />
    </data>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/imageGame"
            style="@style/Image"
            android:layout_width="90dp"
            android:layout_height="80dp"
            app:imageUrl="@{topGame.thumb}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_deals_pikachu" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30833334" />

        <TextView
            android:id="@+id/titleGame"
            android:text="@{topGame.title}"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:maxLines="2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hellblade" />

        <TextView
            android:id="@+id/publisherGame"
            android:text="@{topGame.publisher}"
            style="@style/Subtitle"
            android:layout_marginStart="@dimen/margin_small"
            tools:text="@string/publisher"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/titleGame" />

        <TextView
            android:id="@+id/priceGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@{String.valueOf(topGame.priceFormatted)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="4,99€" />

        <TextView
            android:id="@+id/positionGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(topGame.position)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1º" />

        <ImageView
            android:id="@+id/steamImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xmedium"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/publisherGame"
            app:srcCompat="@drawable/ic_steam_rating" />

        <ImageView
            android:id="@+id/ownerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toEndOf="@+id/steamScore"
            app:layout_constraintTop_toBottomOf="@+id/publisherGame"
            app:srcCompat="@drawable/ic_owners" />

        <TextView
            android:id="@+id/steamScore"
            android:text="@{String.valueOf(topGame.steamRating)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/margin_small"
            tools:text="@string/sample_meta_score"
            app:layout_constraintStart_toEndOf="@+id/steamImage"
            app:layout_constraintTop_toBottomOf="@+id/publisherGame" />

        <TextView
            android:id="@+id/ownerScore"
            android:text="@{String.valueOf(topGame.owners)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/margin_small"
            tools:text="@string/sample_steam_score"
            app:layout_constraintStart_toEndOf="@+id/ownerImage"
            app:layout_constraintTop_toBottomOf="@+id/publisherGame" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.63" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
</layout>